--- a/4/ptrstr.dSYM/Contents/Info.plist
+++ b/4/ptrstr.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.use_new</string>
+		<string>com.apple.xcode.dsym.ptrstr</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
